--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -1,13 +1,14 @@
 /* --- Sections ------------------------------------ */
 
 section {
-    
-    width: 100%;
+   // width: 100%;
+   width: 100vw;
+   // overflow-y: hidden;
    height: 100vh;
    position: relative; //this is how logo is palced?
     font-size: 0.8rem;
     /*display: flex;*/
-    padding: 6rem;
+   padding: 6rem;
     /*justify-content: center;
     align-items: center;*/
    // text-transform: uppercase;
@@ -19,7 +20,8 @@ section {
     // linkmuis Copy Image Address and paste belo
     section#home {
         background-color:$nav-color-1;
-        padding: 2rem;
+      //  margin: 2rem;
+       //padding: 2rem;
         // background-image: url("https://images.unsplash.com/photo-1601758174039-617983b8cdd9?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=986&q=80");
         // background-size: cover;
         // background-position: center center;
@@ -41,7 +43,7 @@ section {
             text-decoration: none;
             /*font-size: 0.8rem;*/
          
-            padding-bottom: .5rem;
+            //padding-bottom: .5rem;
             color: $color-primary;
             border-bottom: 1px solid $color-primary;
         }
